Commit that set every class defined yet, this commit is very important in case of a wrong setup of class fields.

--- a/MJ-13/MJ-13/MJ-13.csproj
+++ b/MJ-13/MJ-13/MJ-13.csproj
@@ -124,6 +124,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Actividades.cs" />
+    <Compile Include="Models\Lideres.cs" />
+    <Compile Include="Models\Miembros.cs" />
+    <Compile Include="Models\Predicadores.cs" />
+    <Compile Include="Models\Programas.cs" />
+    <Compile Include="Models\Tareas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -165,7 +171,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
