Correction of Models and Relations between the Tables. Before the first setup of the Controllers.

--- a/MJ-13/MJ-13/MJ-13.csproj
+++ b/MJ-13/MJ-13/MJ-13.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Models\Predicadores.cs" />
     <Compile Include="Models\Programas.cs" />
     <Compile Include="Models\Tareas.cs" />
+    <Compile Include="Models\TipoP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
