--- a/MJ-13/MJ-13/MJ-13.csproj
+++ b/MJ-13/MJ-13/MJ-13.csproj
@@ -126,10 +126,12 @@
     </Compile>
     <Compile Include="Models\Actividades.cs" />
     <Compile Include="Models\Lideres.cs" />
+    <Compile Include="Models\LideresV.cs" />
     <Compile Include="Models\Miembros.cs" />
     <Compile Include="Models\Predicadores.cs" />
     <Compile Include="Models\Programas.cs" />
     <Compile Include="Models\Tareas.cs" />
+    <Compile Include="Models\TipoP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
