--- a/MJ-13/MJ-13/Web.config
+++ b/MJ-13/MJ-13/Web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
+  For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Contexto" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Contexto-20200710100800; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Contexto-20200710100800.mdf"
+    <add name="Contexto" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Contexto-20200720143251; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Contexto-20200720143251.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -61,7 +61,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
